# FlaskHello

./: .ruff.toml  LICENCE.md  README.md  main.py  pyproject.toml
.github/: python.instructions.md
app/: __init__.py  extensions.py  models.py
app/routes/: home.py
app/templates/: index.html
